# rpg_utils

./: CMakeLists.txt  LICENSE  README.md
docs/: classes.md
include/: example.hpp  position.hpp  velocity.hpp
include/core/: acceleration.hpp  position.hpp  velocity.hpp
include/meta/: rpg_utils_core.hpp
pkg/control/: control
src/: acceleration.cpp  example.cpp  position.cpp  velocity.cpp
tests/: test.cpp
tests/headers/: spatial_test.hpp  testing_objects.hpp
